<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="iap_key" tools:ignore="Typos">MIIBIjANBgkqhkiG9w0BAQEFAAOCAQ8AMIIBCgKCAQEAhAMHVAi0T3nHUAGGBAuUB2lYmnZoWP2wIuJX5Y9haawp2jn4B3H2zWIwLJcSEb1UBJmim6bQLNSeyqfZToWonXmoNNyIuNioSrAExxNFmNMgThSTrJL3yNsywtLmZ+vfHmAFCLMZO4YR/lyfD26GA2WOukOS1lXWOyhKDLg1Khe99/ehYDrL/TTGi3T8LpXUd1tLYiM0LVs7E/FgAvaRz2g2IzdtZTTnTg7fhDf6kxEHJckVRxPpYhrK8dq60I8RwW3ay/una3HraDU3egxj/e8tbuC8zBP1l5COKOiOEiHE3q/JBP4db5QrtwUdB6Y5EV5m0kOrxMTpc28o3t1dRQIDAQAB</string>
    <string name="mer_id">id</string>
    <!--ak apps -->
    <string name="default_web_client">193785287981-taaf7t4invt2edi8hrgrglri052cvt0k.apps.googleusercontent.com</string>
    <!--mosafir apps -->
    <!--    <string name="default_web_client">193785287981-taaf7t4invt2edi8hrgrglri052cvt0k.apps.googleusercontent.com</string>-->
    <string name="app_name">Jazz Mosafir</string>
    <string name="default_notification_channel_id">123</string>
    <string name="discover_pakistan">Discover Pakistan</string>
    <string name="book_a_flight">BOOK A FLIGHT</string>
    <string name="special_offers">RECENT SEARCHES</string>
    <string name="hunza_tour_with_family">Hunza tour with family</string>
    <string name="Hunza">Hunza</string>
    <string name="pkr">PKR</string>
    <string name="_14000">14000</string>
    <string name="loading_best_deals">Loading best deals</string>
    <string name="flight_1">FLight 1</string>
    <string name="child_4_age_in_years">Child 4 Age(In Years)</string>
    <string name="child_3_age_in_years">Child 3 Age(In Years)</string>
    <string name="child_2_age_in_years">Child 2 Age(In Years)</string>
    <string name="child_1_age_in_years">Child 1 Age(In Years)</string>
    <string name="room_children">Room Children</string>
    <string name="room_adults">Room Adults</string>
    <string name="book_hotel">BOOK HOTEL</string>
    <string name="plan_a_trip">PLAN A TRIP</string>
    <string name="select_your_desire_location">Select your desire location</string>
    <string name="checkin">Checkin</string>
    <string name="checkout">Checkout</string>
    <string name="to_manage_your_bookings">to manage your bookings</string>
    <string name="full_name">Full Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="nov">Nov.</string>
    <string name="dec">Dec.</string>
    <string name="oct">Oct.</string>
    <string name="sep">Sep.</string>
    <string name="aug">Aug.</string>
    <string name="july">July</string>
    <string name="june">June</string>
    <string name="may">May</string>
    <string name="apr">Apr.</string>
    <string name="mar">Mar.</string>
    <string name="feb">Feb.</string>
    <string name="jan">Jan.</string>
    <string name="year_2021">Year 2021</string>
    <string name="x">x</string>
    <string name="select_date">Select Date</string>
    <string name="select_your_tour_location">Select your tour location</string>
    <string name="select_tour_date">Select Tour Date</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="clear">Clear</string>
    <string name="select_check_in_date">Select Check In Date</string>
    <string name="apply">Apply</string>
    <string name="cancel">Cancel</string>
    <string name="sign_in">Sign in</string>
    <string name="the_location_or_category_field_is_required">The Location or Category field is required</string>
    <string name="_1_traveller_s">1 Traveller(s) /</string>
    <string name="date">Date</string>
    <string name="arrival_airport_or_city">Arrival Airport or City</string>
    <string name="departure_airport_or_city">Departure Airport or City</string>
    <string name="khi">KHI</string>
    <string name="jinnah_international_airport">,Jinnah International Airport</string>
    <string name="all_tours">All Tours</string>
    <string name="all_booking_history">All Booking History</string>
    <string name="payment_history">Payment History</string>
    <string name="dashboard">Dashboard</string>
    <string name="profile">Profile</string>
    <string name="hi_adil_zahoor_anjum">Hi!</string>
    <string name="log_out">Log Out</string>
    <string name="change_password">Change Password</string>
    <string name="tour_bookings">Tour Bookings</string>
    <string name="hotel_bookings">Hotel Bookings</string>
    <string name="flight_bookings">Flight Bookings</string>
    <string name="my_profile">My Profile</string>
    <string name="booking_history">Booking History</string>
    <string name="_1_person_s_1_room_s">1 Person(s), 1 Room(s)</string>
    <string name="user_login">User Login</string>
    <string name="login">login</string>
    <string name="update">Update</string>
    <string name="not_register_yet">Not Register Yet?</string>
    <string name="register_now">Register Now</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="register">Register</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_10">10</string>
    <string name="_11">11</string>
    <string name="_12">12</string>
    <string name="_13">13</string>
    <string name="_14">14</string>
    <string name="_15">15</string>
    <string name="_16">16</string>
    <string name="_0">0</string>
    <string name="where_to">Where to?</string>
    <string name="enter_location_activity_category">Enter Location, Activity, Category</string>
    <string name="jazz_mosafir">Jazz Mosafir</string>
    <string name="be_patient_we_are_searching_best_matches_for_you">Be patient, We are searching best matches for you</string>
    <string name="done">Done</string>
    <string name="tour">Tour</string>
    <string name="passengers">Passengers</string>
    <string name="adults">Adults</string>
    <string name="_12_years"><![CDATA[>12 Years]]></string>
    <string name="child">Child</string>
    <string name="_2_12_yrs">(2–12 YRS)</string>
    <string name="infant">Infant</string>
    <string name="below_2yrs">(Below 2YRS)</string>
    <string name="rooms_and_passengers">Rooms and Passengers</string>
    <string name="room_s">Room(s)</string>
    <string name="choose_number_of_rooms">choose number of rooms</string>
    <string name="class_and_passengers">Class and Passengers</string>
    <string name="adult_s">Adult(s)</string>
    <string name="over_12_years_old">over 12 years old</string>
    <string name="child_ren">Child(ren)</string>
    <string name="_2_12_years_old">2–12 years Old</string>
    <string name="_0_2_years_old">0–2 years old</string>
    <string name="economy">Economy</string>
    <string name="business">Business</string>
    <string name="talk_to_us">Talk to us</string>
    <!--    fb login integration-->
    <string name="fb_login_protocol_scheme">fb1440480966335711</string>
    <string name="facebook_app_id">1440480966335711</string>
    <string name="facebook_client_token">b2d40d5b3f71fa381e8b1c8c3d22da95</string>


    <string name="or">OR</string>
    <string name="enjoy_the_experience_of_these_serene_places_with_astonishing_sights">Enjoy the experience of these serene places with astonishing sights.</string>
    <string name="here_are_some_of_the_most_famous_destinations_visited_by_tourists">Here are some of the most famous destinations visited by tourists</string>
    <string name="watch_where_you_are_going">Watch where you are going</string>
    <string name="we_celebrate_kahani">We celebrate travelers tales and adventures! Their Journeys and experiences that should be known. Mosafir Kahani is where the travelers share their chronicles with us to cherish.</string>
    <string name="enter_otp_here">Enter OTP here</string>
    <string name="_59">59</string>
    <string name="seconds_wait_until_sms_otp_received">Seconds wait until sms OTP received</string>
</resources>