<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:background="@color/colorWhite"
        android:orientation="vertical">
    <androidx.appcompat.widget.Toolbar
            android:background="@color/colorRed"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="match_parent"
            android:id="@+id/toolbar"
            android:layout_height="@dimen/_40sdp">
        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <TextView
                    android:id="@+id/title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:fontFamily="@font/montserrat"
                    android:text="@string/select_date"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/_16sdp"
                    tools:ignore="RelativeOverlap" />
            <TextView
                    android:textSize="@dimen/_9sdp"
                    android:textColor="@color/colorWhite"
                    android:gravity="center"
                    android:text="@string/x"
                    android:id="@+id/cancel"
                    android:layout_marginEnd="@dimen/_12sdp"
                    android:layout_centerVertical="true"
                    android:layout_alignParentEnd="true"
                    android:background="@drawable/square_round_corner"
                    android:layout_width="@dimen/_25sdp"
                    android:layout_height="@dimen/_25sdp"/>
        </RelativeLayout>

    </androidx.appcompat.widget.Toolbar>
    <RelativeLayout
            android:id="@+id/date_picker_header"
            app:layout_constraintTop_toBottomOf="@id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp">

        <ImageView
                android:id="@+id/previous"
                android:layout_width="@dimen/_12sdp"
                android:layout_height="@dimen/_12sdp"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/_15sdp"
                android:background="@drawable/background_black_light_circle"
                android:src="@drawable/previous"
                tools:ignore="ContentDescription" />

        <TextView
                android:id="@+id/year"
                android:layout_width="0dp"
                android:layout_height="@dimen/_30sdp"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_8sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:layout_marginBottom="@dimen/_8sdp"
                android:layout_toStartOf="@id/next"
                android:layout_toEndOf="@id/previous"
                android:background="@drawable/background_datepicker"
                android:gravity="center"
                android:textColor="@color/colorBlack"
                android:text="@string/year_2021"
                android:textSize="@dimen/_14sdp"
                android:textStyle="bold" />

        <ImageView
                android:id="@+id/next"
                android:layout_width="@dimen/_12sdp"
                android:layout_height="@dimen/_12sdp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="@dimen/_15sdp"
                android:background="@drawable/background_black_circle"
                android:src="@drawable/next"
                tools:ignore="ContentDescription" />
    </RelativeLayout>
    <TextView
            android:gravity="center"
            android:text="@string/jan"
            style="@style/monthTextView"
            android:id="@+id/jan"
            android:layout_marginEnd="@dimen/_10sdp"
            app:layout_constraintEnd_toStartOf="@id/feb"
            android:layout_marginStart="@dimen/_10sdp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="@dimen/_10sdp"
            app:layout_constraintTop_toBottomOf="@id/date_picker_header"
            android:layout_width="0dp"/>
    <TextView
            android:layout_marginEnd="@dimen/_10sdp"
            app:layout_constraintTop_toTopOf="@id/jan"
            app:layout_constraintStart_toEndOf="@id/jan"
            app:layout_constraintEnd_toStartOf="@id/march"
            android:id="@+id/feb"
            android:gravity="center"
            style="@style/monthTextView"
            android:text="@string/feb"
            android:layout_width="0dp"/>
    <TextView
            android:layout_marginEnd="@dimen/_10sdp"
            app:layout_constraintStart_toEndOf="@id/feb"
            app:layout_constraintTop_toTopOf="@id/jan"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/march"
            android:gravity="center"
            style="@style/monthTextView"
            android:text="@string/mar"
            android:layout_width="0dp"/>
    <TextView
            android:gravity="center"
            style="@style/monthTextView"
            android:text="@string/apr"
            android:id="@+id/april"
            android:layout_marginEnd="@dimen/_10sdp"
            app:layout_constraintEnd_toStartOf="@id/may"
            android:layout_marginStart="@dimen/_10sdp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="@dimen/_10sdp"
            app:layout_constraintTop_toBottomOf="@id/jan"
            android:layout_width="0dp"/>
    <TextView
            android:layout_marginEnd="@dimen/_10sdp"
            app:layout_constraintTop_toTopOf="@id/april"
            app:layout_constraintStart_toEndOf="@id/april"
            app:layout_constraintEnd_toStartOf="@id/june"
            android:id="@+id/may"
            android:gravity="center"
            style="@style/monthTextView"
            android:text="@string/may"
            android:layout_width="0dp"/>
    <TextView
            android:layout_marginEnd="@dimen/_10sdp"
            app:layout_constraintStart_toEndOf="@id/may"
            app:layout_constraintTop_toTopOf="@id/april"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/june"
            android:gravity="center"
            style="@style/monthTextView"
            android:text="@string/june"
            android:layout_width="0dp"/>

    <TextView
            android:gravity="center"
            style="@style/monthTextView"
            android:text="@string/july"
            android:id="@+id/july"
            android:layout_marginEnd="@dimen/_10sdp"
            app:layout_constraintEnd_toStartOf="@id/auguest"
            android:layout_marginStart="@dimen/_10sdp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="@dimen/_10sdp"
            app:layout_constraintTop_toBottomOf="@id/april"
            android:layout_width="0dp"/>
    <TextView
            android:layout_marginEnd="@dimen/_10sdp"
            app:layout_constraintTop_toTopOf="@id/july"
            app:layout_constraintStart_toEndOf="@id/july"
            app:layout_constraintEnd_toStartOf="@id/september"
            android:id="@+id/auguest"
            android:gravity="center"
            style="@style/monthTextView"
            android:text="@string/aug"
            android:layout_width="0dp"/>
    <TextView
            android:layout_marginEnd="@dimen/_10sdp"
            app:layout_constraintStart_toEndOf="@id/auguest"
            app:layout_constraintTop_toTopOf="@id/auguest"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/september"
            android:gravity="center"
            style="@style/monthTextView"
            android:text="@string/sep"
            android:layout_width="0dp"/>
    <TextView
            android:gravity="center"
            style="@style/monthTextView"
            android:text="@string/oct"
            android:id="@+id/october"
            android:layout_marginEnd="@dimen/_10sdp"
            app:layout_constraintEnd_toStartOf="@id/november"
            android:layout_marginStart="@dimen/_10sdp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="@dimen/_10sdp"
            app:layout_constraintTop_toBottomOf="@id/auguest"
            android:layout_width="0dp"/>
    <TextView
            android:layout_marginEnd="@dimen/_10sdp"
            app:layout_constraintTop_toTopOf="@id/october"
            app:layout_constraintStart_toEndOf="@id/october"
            app:layout_constraintEnd_toStartOf="@id/december"
            android:id="@+id/november"
            android:gravity="center"
            style="@style/monthTextView"
            android:text="@string/nov"
            android:layout_width="0dp"/>
    <TextView
            android:layout_marginEnd="@dimen/_10sdp"
            app:layout_constraintStart_toEndOf="@id/november"
            app:layout_constraintTop_toTopOf="@id/october"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/december"
            android:gravity="center"
            style="@style/monthTextView"
            android:text="@string/dec"
            android:layout_width="0dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>