<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="@dimen/_280sdp"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        android:orientation="vertical">
    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        <TextView
                android:text="@string/_2"
                android:textStyle="bold"
                android:textSize="@dimen/_15sdp"
                android:fontFamily="@font/montserrat"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:ignore="RelativeOverlap" />
        <RadioButton
                android:id="@+id/two"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="@dimen/_8sdp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
    </RelativeLayout>
    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <TextView
                android:fontFamily="@font/montserrat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/_3"
                android:textSize="@dimen/_15sdp"
                android:textStyle="bold"
                tools:ignore="RelativeOverlap" />
        <RadioButton
                android:id="@+id/three"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="@dimen/_8sdp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
    </RelativeLayout>
    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        <TextView
                android:text="@string/_4"
                android:fontFamily="@font/montserrat"
                android:textStyle="bold"
                android:textSize="@dimen/_15sdp"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:ignore="RelativeOverlap" />
        <RadioButton
                android:id="@+id/four"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="@dimen/_8sdp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
    </RelativeLayout>
    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        <TextView
                android:text="@string/_5"
                android:textStyle="bold"
                android:fontFamily="@font/montserrat"
                android:textSize="@dimen/_15sdp"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:ignore="RelativeOverlap" />
        <RadioButton
                android:id="@+id/five"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="@dimen/_8sdp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
    </RelativeLayout>
    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        <TextView
                android:text="@string/_6"
                android:textStyle="bold"
                android:fontFamily="@font/montserrat"
                android:textSize="@dimen/_15sdp"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:ignore="RelativeOverlap" />
        <RadioButton
                android:id="@+id/six"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="@dimen/_8sdp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
    </RelativeLayout>
    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        <TextView
                android:text="@string/_7"
                android:textStyle="bold"
                android:fontFamily="@font/montserrat"
                android:textSize="@dimen/_15sdp"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:ignore="RelativeOverlap" />
        <RadioButton
                android:id="@+id/seven"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="@dimen/_8sdp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
    </RelativeLayout>
    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        <TextView
                android:text="@string/_8"
                android:textStyle="bold"
                android:fontFamily="@font/montserrat"
                android:textSize="@dimen/_15sdp"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:ignore="RelativeOverlap" />
        <RadioButton
                android:id="@+id/eight"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="@dimen/_8sdp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
    </RelativeLayout>
    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        <TextView
                android:text="@string/_9"
                android:textStyle="bold"
                android:fontFamily="@font/montserrat"
                android:textSize="@dimen/_15sdp"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:ignore="RelativeOverlap" />
        <RadioButton
                android:id="@+id/nine"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="@dimen/_8sdp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
    </RelativeLayout>
    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        <TextView
                android:text="@string/_10"
                android:textStyle="bold"
                android:fontFamily="@font/montserrat"
                android:textSize="@dimen/_15sdp"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:ignore="RelativeOverlap" />
        <RadioButton
                android:id="@+id/ten"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="@dimen/_8sdp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
    </RelativeLayout>
    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        <TextView
                android:text="@string/_11"
                android:textStyle="bold"
                android:fontFamily="@font/montserrat"
                android:textSize="@dimen/_15sdp"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:ignore="RelativeOverlap" />
        <RadioButton
                android:id="@+id/eleven"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="@dimen/_8sdp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
    </RelativeLayout>
    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        <TextView
                android:text="@string/_12"
                android:fontFamily="@font/montserrat"
                android:textStyle="bold"
                android:textSize="@dimen/_15sdp"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:ignore="RelativeOverlap" />
        <RadioButton
                android:id="@+id/twelve"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="@dimen/_8sdp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
    </RelativeLayout>
    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        <TextView
                android:text="@string/_13"
                android:fontFamily="@font/montserrat"
                android:textStyle="bold"
                android:textSize="@dimen/_15sdp"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:ignore="RelativeOverlap" />
        <RadioButton
                android:id="@+id/thirteen"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="@dimen/_8sdp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
    </RelativeLayout>
    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        <TextView
                android:text="@string/_14"
                android:fontFamily="@font/montserrat"
                android:textStyle="bold"
                android:textSize="@dimen/_15sdp"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:ignore="RelativeOverlap" />
        <RadioButton
                android:id="@+id/fourteen"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="@dimen/_8sdp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
    </RelativeLayout>
    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        <TextView
                android:text="@string/_15"
                android:textStyle="bold"
                android:fontFamily="@font/montserrat"
                android:textSize="@dimen/_15sdp"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:ignore="RelativeOverlap" />
        <RadioButton
                android:id="@+id/fifteen"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="@dimen/_8sdp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
    </RelativeLayout>
    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        <TextView
                android:text="@string/_16"
                android:fontFamily="@font/montserrat"
                android:textStyle="bold"
                android:textSize="@dimen/_15sdp"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:ignore="RelativeOverlap" />
        <RadioButton
                android:id="@+id/sixteen"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="@dimen/_8sdp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
    </RelativeLayout>
</LinearLayout>